<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Remove"
        app:layout_constraintEnd_toStartOf="@+id/favoriteButton"
        app:layout_constraintStart_toEndOf="@+id/logo_image"
        tools:layout_editor_absoluteY="6dp" />

    <Button
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="Add to favorites"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="6dp" />

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:src="@drawable/games"
        app:layout_constraintEnd_toStartOf="@+id/favoriteButton"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image">

        <TextView
            android:id="@+id/item_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <ImageView
            android:id="@+id/cover_imageview"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:src="@drawable/games" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/username_editText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Unesi username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/review_editText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Unesi review"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/rating_editText"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Unesi rating"
                android:inputType="number" />

            <Button
                android:id="@+id/reviewButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="OK" />
        </LinearLayout>

        <TextView
            android:id="@+id/platform_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black" />

        <TextView
            android:id="@+id/release_date_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black" />

        <TextView
            android:id="@+id/esrb_rating_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black" />

        <TextView
            android:id="@+id/developer_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black" />

        <TextView
            android:id="@+id/publisher_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black" />

        <TextView
            android:id="@+id/genre_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black" />

        <TextView
            android:id="@+id/description_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/review_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
